<resources>
    <string name="app_name">IT-Schedule</string>
    <string name="app_teacher">Teachers</string>
    <string name="app_students">Students</string>
    <string name="app_schedule">Week days</string>
    <string name="app_schedule_one">Week days</string>
    <string name="app_table_teacher">Timetable</string>
    <string name="app_table_student">Timetable</string>

    <!-- Timetable dates -->
    <string name="timeTitle">Время</string>
    <string name="subjectTitle">Предмет</string>
    <string name="room">Ауд.</string>
    <string name="groupTitle">Группа</string>


    <!-- Teacher and srudents cardView -->
    <string name="studentCard">Schedule 2016/2017</string>
    <string name="teacherCard">Extracts teachers</string>

    <!-- Timetable dates -->
    <string name="time1">08:00 - 08:50</string>
    <string name="time2">09:00 - 09:50</string>
    <string name="time3">10:00 - 10:50</string>
    <string name="time4">11:00 - 11:50</string>
    <string name="time5">12:10 - 13:00</string>
    <string name="time6">13:10 - 14:00</string>
    <string name="time7">14:10 - 15:00</string>
    <string name="time8">15:10 - 16:00</string>
    <string name="time9">16:10 - 17:00</string>
    <string name="time10">17:20 - 18:10</string>
    <string name="time11">17:20 - 18:10</string>
    <string name="time12">18:20 - 19:10</string>
    <string name="time13">19:20 - 20:10</string>


</resources>
